--- a/docker/games-apps/compose.yaml
+++ b/docker/games-apps/compose.yaml
@@ -1,7 +1,6 @@
 services:
-  mc:
+  minecraft:
     image: itzg/minecraft-server
-    container_name: minecraft
     tty: true
     stdin_open: true
     environment:
@@ -12,7 +11,7 @@ services:
       # https://docker-minecraft-server.readthedocs.io/en/latest/variables/#server
       - EULA=TRUE
       - TYPE=VANILLA
-      - VERSION=1.21.10 
+      - VERSION=1.21.10
       - DIFFICULTY=normal
     volumes:
       - /portainer/Files/AppData/Config/Minecraft:/data
