--- a/docker/admin-apps/compose.yaml
+++ b/docker/admin-apps/compose.yaml
@@ -2,11 +2,11 @@ services:
   nginxpm:
     image: jc21/nginx-proxy-manager:latest
     environment:
-      - PUID=1000
-      - PGID=1000
+      - PUID=${USER}
+      - PGID=${GROUP}
     volumes:
-      - /portainer/Files/AppData/Config/NginxPM/data:/data
-      - /portainer/Files/AppData/Config/NginxPM/letsencrypt:/etc/letsencrypt
+      - ${CONFIG_FOLDER}/NginxPM/data:/data
+      - ${CONFIG_FOLDER}/NginxPM/letsencrypt:/etc/letsencrypt
     ports:
       - 80:80 # Public HTTP Port
       - 443:443 # Public HTTPS Port
@@ -20,10 +20,10 @@ services:
     environment:
       - PORT=7575
     volumes:
-      - /portainer/Files/AppData/Config/Homer:/www/assets
+      - ${CONFIG_FOLDER}/Homer:/www/assets
     ports:
       - 7575:7575
-    user: 1000:1000
+    user: ${USER}:${GROUP}
     restart: unless-stopped
     networks:
       - main
@@ -31,14 +31,14 @@ services:
   code:
     image: lscr.io/linuxserver/code-server:latest
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Europe/Madrid
+      - PUID=${USER}
+      - PGID=${GROUP}
+      - TZ=${TZ}
       - SUDO_PASSWORD=${CODE_SERVER_SUDO_PASSWORD}
       # SSH agent forwarding
       - SSH_AUTH_SOCK=/ssh-agent
     volumes:
-      - /portainer/Files/AppData/Config/Code-Server:/config
+      - ${CONFIG_FOLDER}/Code-Server:/config
       # SSH agent forwarding
       - ${SSH_AUTH_SOCK}:/ssh-agent
     ports:
