New structure using more granular stasks

--- a/docker/dev-tools/.env
+++ b/docker/dev-tools/.env
@@ -2,6 +2,7 @@ USER=1000
 GROUP=1000
 TZ=Europe/Madrid
 CONFIG_FOLDER=/portainer/Files/AppData/Config
+DATA_FOLDER=/srv/dev-disk-by-uuid-c497dd5c-e3cc-48fb-b67c-a6cb0865cf53/Public
 
 # Secrets that will be provided in Portainer
 CODE_SERVER_SUDO_PASSWORD=
