--- a/docker/downloads/.env
+++ b/docker/downloads/.env
@@ -2,4 +2,4 @@ USER=1000
 GROUP=1000
 TZ=Europe/Madrid
 CONFIG_FOLDER=/portainer/Files/AppData/Config
-MINECRAFT_VERSION=1.21.11
+DATA_FOLDER=/srv/dev-disk-by-uuid-c497dd5c-e3cc-48fb-b67c-a6cb0865cf53/Public
