--- a/docker/media-plex/.env
+++ b/docker/media-plex/.env
@@ -5,5 +5,5 @@ CONFIG_FOLDER=/portainer/Files/AppData/Config
 DATA_FOLDER=/srv/dev-disk-by-uuid-c497dd5c-e3cc-48fb-b67c-a6cb0865cf53/Public
 
 # Secrets that will be provided in Portainer
-# Optionally you can obtain a claim token from https://plex.tv/claim⁠ and input here. Keep in mind that the claim tokens expire within 4 minutes.
-#PLEX_CLAIM=
+# Optionally you can obtain a claim token from https://plex.tv/claim and input here. Keep in mind that the claim tokens expire within 4 minutes.
+PLEX_CLAIM=
