--- a/docker/management/compose.yaml
+++ b/docker/management/compose.yaml
@@ -12,16 +12,16 @@ services:
     networks:
       - main
 
-  # portainer:
-  #   image: portainer/portainer-ce:lts
-  #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock
-  #     - ${CONFIG_FOLDER}/Portainer:/data
-  #   ports:
-  #     - 9443:9443
-  #   restart: unless-stopped
-  #   networks:
-  #     - main
+  portainer:
+    image: portainer/portainer-ce:lts
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ${CONFIG_FOLDER}/Portainer:/data
+    ports:
+      - 9443:9443
+    restart: unless-stopped
+    networks:
+      - main
 
 networks:
   main:
