Using prefix in .env variables to avoid collisions
- Using also a .env.common file to share variables

--- a/docker/dev-tools/.env.example
+++ b/docker/dev-tools/.env.example
@@ -1,8 +1,2 @@
-USER=1000
-GROUP=1000
-TZ=Europe/Madrid
-CONFIG_FOLDER=/srv/dev-disk-by-uuid-c497dd5c-e3cc-48fb-b67c-a6cb0865cf53/Config
-DATA_FOLDER=/srv/dev-disk-by-uuid-c497dd5c-e3cc-48fb-b67c-a6cb0865cf53/Public
-
-CODE_SERVER_SUDO_PASSWORD=
-SSH_AUTH_SOCK=
+HL_CODE_SERVER_SUDO_PASSWORD=
+HL_SSH_AUTH_SOCK=
