--- a/docker/media-plex/compose.yaml
+++ b/docker/media-plex/compose.yaml
@@ -2,18 +2,18 @@ services:
   plex:
     image: lscr.io/linuxserver/plex:latest
     environment:
-      - PUID=${USER}
-      - PGID=${GROUP}
-      - TZ=${TZ}
+      - PUID=${HL_USER}
+      - PGID=${HL_GROUP}
+      - TZ=${HL_TZ}
       - VERSION=docker
-      - PLEX_CLAIM=${PLEX_CLAIM:?PLEX_CLAIM is required}
+      - PLEX_CLAIM=${HL_PLEX_CLAIM:?HL_PLEX_CLAIM is required}
     volumes:
-      - ${CONFIG_FOLDER}/Plex:/config
-      - ${DATA_FOLDER}/TV:/tv
-      - ${DATA_FOLDER}/Movies:/movies
-      - ${DATA_FOLDER}/Videos:/videos
-      - ${DATA_FOLDER}/Photos:/photos
-      - ${DATA_FOLDER}/Music:/music
+      - ${HL_CONFIG_FOLDER}/Plex:/config
+      - ${HL_DATA_FOLDER}/TV:/tv
+      - ${HL_DATA_FOLDER}/Movies:/movies
+      - ${HL_DATA_FOLDER}/Videos:/videos
+      - ${HL_DATA_FOLDER}/Photos:/photos
+      - ${HL_DATA_FOLDER}/Music:/music
     ports:
       - 32400:32400 # Web UI Port
       - 32469:32469 # Plex DLNA Server Port
