--- a/docker/media-plex/.env.example
+++ b/docker/media-plex/.env.example
@@ -1,8 +1,2 @@
-USER=1000
-GROUP=1000
-TZ=Europe/Madrid
-CONFIG_FOLDER=/srv/dev-disk-by-uuid-c497dd5c-e3cc-48fb-b67c-a6cb0865cf53/Config
-DATA_FOLDER=/srv/dev-disk-by-uuid-c497dd5c-e3cc-48fb-b67c-a6cb0865cf53/Public
-
 # Optionally you can obtain a claim token from https://plex.tv/claim and input here. Keep in mind that the claim tokens expire within 4 minutes.
-PLEX_CLAIM=
+HL_PLEX_CLAIM=
