--- a/docker/media-plex/compose.yaml
+++ b/docker/media-plex/compose.yaml
@@ -9,11 +9,7 @@ services:
       - PLEX_CLAIM=${HL_PLEX_CLAIM:?HL_PLEX_CLAIM is required}
     volumes:
       - ${HL_CONFIG_FOLDER}/plex:/config
-      - ${HL_DATA_FOLDER}/tv:/tv
-      - ${HL_DATA_FOLDER}/movies:/movies
-      - ${HL_DATA_FOLDER}/videos:/videos
-      - ${HL_DATA_FOLDER}/photos:/photos
-      - ${HL_DATA_FOLDER}/music:/music
+      - ${HL_DATA_FOLDER}/media:/data/media
     ports:
       - 32400:32400 # Web UI Port
       - 32469:32469 # Plex DLNA Server Port
